apps/cvsickle-profile/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: cvsickle-profile
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      imagePullSecrets:
        - name: forgejo-registry
      containers:
        - name: profile
          image: 0.1.8 # {"$imagepolicy": "flux-system:cvsickle-profile:tag"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
      restartPolicy: Always
