apps/cvsickle-profile/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: littlelink
  namespace: littlelink
spec:
  selector:
    app: littlelink
  ports:
  - name: http
    port: 8080
    targetPort: 3000
