apps/cvsickle-profile/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: littlelink
  namespace: littlelink
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`littlelink.local.cvsickle.com`)
      kind: Rule
      services:
        - name: littlelink
          port: 8080
